# remote-assistant

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile
.github/workflows/: deploy-cloud-relay.yml
cloud-relay/: Cargo.toml  docker-compose.yml
cloud-relay/src/: auth.rs  db.rs  main.rs  ws.rs
mobile-app/: package.json
mobile-app/src/: App.css  App.tsx
mobile-app/src-tauri/: Cargo.toml  tauri.conf.json
mobile-app/src-tauri/src/: lib.rs  main.rs  ws.rs
mobile-app/src/components/: BindDevice.tsx  ChatView.tsx  DeviceList.tsx  Login.tsx
mobile-app/src/services/: tauri.ts
pc-agent/: Cargo.toml  index.html  package.json
pc-agent/src/: App.css  App.tsx
pc-agent/src-tauri/: Cargo.toml  tauri.conf.json
pc-agent/src-tauri/src/: lib.rs  main.rs  ws.rs
pc-agent/src-tauri/src/sub_agents/: browser.rs  file_manager.rs  mod.rs  simulator.rs  system.rs
pc-agent/src/services/: llm.ts  tauri.ts
shared/: Cargo.toml
shared/src/: lib.rs
