[package]
name = "cloud-relay"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }

# 异步运行时与 WebSocket
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }   # 也可以换成 poem
tokio-tungstenite = "0.29.0"
futures-util = "0.3"

# 状态管理
dashmap = "6"
tokio-stream = "0.1"

# 序列化与日志
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"

# 可选：TLS 支持（如果直接用 axum 内置）
rustls = "0.23"
rustls-pemfile = "2"
# 可选：认证
jsonwebtoken = "10.4.0"

# 数据库与工具
rusqlite = { version = "0.35", features = ["bundled"] }
rand = "0.9"
bcrypt = "0.17"