[package]
name = "pc-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }

# 异步与 WebSocket 客户端
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.29.0", features = ["native-tls"] }  # 或 rustls
futures-util = "0.3"

# 桌面自动化
enigo = { version = "0.6.1", features = ["serde"] }   # 模拟键鼠
# 屏幕截图（不同平台选不同的库，这里给一个跨平台示例）
screenshots = "0.8"            # 纯 Rust，支持多平台
# 或者分别用：
# [target.'cfg(target_os = "windows")'.dependencies]
# winapi = ...
# [target.'cfg(target_os = "linux")'.dependencies]
# x11 = ...

# 序列化与日志
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"

# 可选：系统托盘（如果需要小图标）
# tray-icon = "0.17"