[package]
name = "pc-agent"
version = "0.1.0"
description = "PC Butler Desktop Agent"
edition = "2021"

[lib]
name = "pc_agent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
shared = { path = "../../shared" }
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.29.0", features = ["native-tls"] }
futures-util = "0.3"
enigo = { version = "0.6.1", features = ["serde"] }
screenshots = "0.8"
base64 = "0.22"
walkdir = "2"
sysinfo = "0.34"
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.12", features = ["json"] }
png = "0.17"
